@@ -1,5 +1,6 @@
 Aug 04 2003  3.0.1  Added pcapfile capture source (nearly the same function as
                      wtapfile but doesn't need ethereal)
+                    Merged panelfront gps fixes from mdmcl
 Aug 03 2003  3.0.1  Added --help to kismet script
                     Fixed gps after breaking it yesterday
 Aug 02 2003  3.0.1  Fixed alert protocol to use a \001 delimited string
